[package]
name = "opentelemetry-common-log"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
opentelemetry = "0.21.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-http = "0.10.0"
opentelemetry-otlp = {version = "0.14.0", optional = true }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio", "reqwest_collector_client"], optional = true }
opentelemetry-datadog = { version = "0.9.0", features = ["reqwest-client"], optional = true }

[features]
default = ["otlp"]
jaeger = ["opentelemetry-jaeger"]
otlp = ["opentelemetry-otlp"]
datadog = ["opentelemetry-datadog"]
